syntax = "proto2";

message pb_msg_hello
{
    required int32 bk_id = 1;
}

message pb_msg_zmq_pair
{
    required int32 bk_id = 1;
}

// Generic message for a block
message pb_msg_block
{
    enum msg_type
    {
        MSG_HELLO = 1;
        MSG_ZMQ_PAIR = 2;
    }
    required msg_type type = 1;
    oneof msg_block
    {
        pb_msg_hello hello = 2;
        pb_msg_zmq_pair zmq_pair = 3;
    }
}
